--- a/Data Question 4 Presentation.Rmd
+++ b/Data Question 4 Presentation.Rmd
@@ -8,7 +8,7 @@ output:
     highlight: tango
 ---
 
-### Intro: R Tools Utilized
+### Intro: R Packages Utilized
 
 ```{r, message = FALSE, warning = FALSE}
 library("tidyverse")
@@ -18,6 +18,18 @@ library("magrittr")
 library("ggplot2")
 library("GGally")
 library("broom")
+library("plyr")
+library("ggmap")
+library("maps")
+library("mapdata")
+library("rgeos")
+library("maptools")
+library("sp")
+library("raster")
+library("rgdal")
+library("sf")
+library("broom")
+library("stringr")
 ```
 
 ### Where did the data come from? 
@@ -29,182 +41,111 @@ library("broom")
 * Aggregated tax infomration organized by zipcode. 
 
 
-### Cleaning and organizing the CORE Data 
+### Correlation Matrix of Averaged IRS Data
 
-```{r echo = FALSE, errors = FALSE, warnings = FALSE, message = FALSE}
+```{r}
+irs <- read.csv("data/irs_avg.csv")
 
-core <- read_csv("data/achievement_profile_data_with_CORE.csv")
-zips <- read_excel("data/zip_code_database.xlsx")
+ggcorr(irs)
 
-TN_zips <- zips %>%
-  filter(state == 'TN')
-
-TN_zips <- TN_zips[-c(2, 3, 5, 6, 9:12)]
-
-core <- core[-c(1)]
-colnames(core)[1] <- 'county'
-core <- core %>%
-  rowwise() %>%
-  mutate(avg_Math = mean(c(Math, AlgI, AlgII), na.rm = TRUE),
-         avg_Eng = mean(c(ELA, EngI, EngII, EngIII), na.rm = TRUE),
-         avg_Sci = mean(c(Science, BioI, Chemistry), na.rm = TRUE))
-
-merged_county <- core %>% 
-  inner_join(TN_zips, by = 'county') 
-
-merged_county <- select(merged_county, zip, county, avg_Math, avg_Eng, avg_Sci, everything())
 
 ```
 
-### Merging the CORE data with zip codes
+### Correlation Matrix of CORE Education Data
 
-```{r echo = FALSE, errors = FALSE, warnings = FALSE, message = FALSE}
-merged_county <- core %>% 
-  inner_join(TN_zips, by = 'county') 
+```{r warning=FALSE, message=FALSE}
+edu_raw <- read.csv("data/achievement_profile_data_with_CORE.csv")
+View(edu_raw)
 
-merged_county <- select(merged_county, zip, county, avg_Math, avg_Eng, avg_Sci, everything())
-
-```
-
-### Organinizing the IRS Data
-
-```{r echo = FALSE, errors = FALSE, warnings = FALSE, message = FALSE}
-
-# reading the 2015 IRS data
-tn_2013 <- read_xls("data/IRS_2013_original.xls", range = cell_rows(3:4724))
-tn_2013 <- tn_2013[4:4724,]
-
-# getting the data in the predecided order
-tn_2013_df <- select(tn_2013,`[Money amounts are in thousands of dollars]`,
-                     X__1,
-                     X__2,
-                     X__7,
-                     X__8,
-                     X__9,
-                     X__12,
-                     X__13,
-                     X__14,
-                     X__15,
-                     X__16,
-                     X__17,
-                     X__22,
-                     X__23,
-                     X__30,
-                     X__24,
-                     X__25,
-                     X__26,
-                     X__27,
-                     X__28,
-                     X__29,
-                     X__31,
-                     X__32,
-                     X__33,
-                     X__34,
-                     X__53,
-                     X__54,
-                     X__66,
-                     X__67,
-                     X__64,
-                     X__65,
-                     X__60,
-                     X__61,
-                     X__56,
-                     X__57,
-                     X__58,
-                     X__59,
-                     X__68,
-                     X__69,
-                     X__74,
-                     X__75,
-                     X__92,
-                     X__93,
-                     X__94,
-                     X__95,
-                     X__102,
-                     X__103,
-                     X__108,
-                     X__109,
-                     X__110,
-                     X__111,
-                     X__6)
-View(tn_2013_df)         
-
-# standardizing col names in a vector
-cols <-c ('zip_code',
-          'agi_range',
-          'return_count',
-          'exemption_count',
-          'dependent_count' ,
-          'agi_amt' ,
-          'salary_wages_count',
-          'salary_wages_amt',
-          'taxable_interest_count',
-          'taxable_interest_amt',
-          'ordinary_dividends_count',
-          'ordinary_dividends_amt',
-          'business_income_count',
-          'business_income_amt' ,
-          'farm_income_count' ,
-          'net_capital_gain_count',
-          'net_capital_gain_amt',
-          'taxable_IRA_dist_count',
-          'taxable_IRA_dist_amt',
-          'pension_income_count',
-          'pension_income_amt',
-          'unemployment_count',
-          'unemployment_amt',
-          'social_security_count' ,
-          'social_security_amt' ,
-          'item_deduc_count',
-          'item_deduc_amt',
-          'charitable_contribution_count' ,
-          'charitable_contribution_amt' ,
-          'mortgage_int_count',
-          'mortgage_int_amt',
-          'property_tax_count',
-          'property_tax_amt',
-          'state_local_income_tax_count',
-          'state_local_income_tax_amt',
-          'state_local_sales_tax_count' ,
-          'state_local_sales_tax_amt' ,
-          'taxable_income_count',
-          'taxable_income_amt',
-          'tot_tax_credit_count',
-          'tot_tax_credit_amt',
-          'earned_income_credit_count',
-          'earned_income_credit_amt',
-          'excess_eaned_income_credit_count',
-          'excess_eaned_income_credit_amt',
-          'tax_liability_count' ,
-          'tax_liability_amt' ,
-          'balance_due_count' ,
-          'balance_due_amt' ,
-          'refund_count',
-          'refund_amt',
-          'paid_prep_count'
+edu_2 <- dplyr::select(edu_raw, system_name,BioI,Chemistry,ELA,EngI,EngII,EngIII,AlgI,AlgII,Math,Science,ACT_Composite,Graduation,Pct_Native_American,Pct_SWD,
+                Pct_Black,Pct_Hispanic,Pct_EL,Pct_ED,Pct_BHN,Pct_Chronically_Absent,
+                Pct_Suspended,Pct_Expelled,Per_Pupil_Expenditures,Enrollment
 )
-# reanming column names in df
-colnames(tn_2013_df) <- cols
+ggcorr(edu_2)
 
-# Adding year as a column
-
-tn_2013_df$year <- rep(2013,nrow(tn_2013_df))
-
-#omitting na in a row
-tn_2013_df <- tn_2013_df[rowSums(is.na(tn_2013_df))!=ncol(tn_2013_df), ]
-
-# Adding total to the agi_range for further filtering
-tn_2013_df$agi_range[is.na(tn_2013_df$agi_range)] <- "Total"
-
-tn_2013_df <- tn_2013_df %>%
-  mutate(agi_amt_avg = as.numeric(agi_amt)/as.numeric(return_count),
-         salary_avg = as.numeric(salary_wages_amt)/as.numeric(salary_wages_count),
-         mortgage_amt_avg = as.numeric(mortgage_int_amt)/as.numeric(mortgage_int_count),
-         prop_tax_avg = as.numeric(property_tax_amt)/as.numeric(property_tax_count),
-         taxable_income_avg = as.numeric(taxable_income_amt)/as.numeric(taxable_income_count),
-         earned_income_credit_avg = as.numeric(earned_income_credit_amt)/as.numeric(earned_income_credit_count),
-         excess_eaned_income_credit_avg = as.numeric(excess_eaned_income_credit_amt)/as.numeric(excess_eaned_income_credit_count)
-  )
-  
 ```
+
+### Average Science 
+
+```{r}
+usa <- map_data("usa")
+states <- map_data("state")
+tn_df <- subset(states, region == "tennessee")
+counties <- map_data("county")
+tn_counties <- subset(counties, region == "tennessee")
+
+tn_base <- ggplot(data = tn_df, mapping = aes(x = long, y = lat, group = group)) + 
+  coord_fixed(1.3) + 
+  geom_polygon(color = "black", fill = "gray")
+tn_base + theme_nothing()
+
+#I need to be able to merge these two to create the ggmap
+
+core <- read.csv("data/merged_county.csv")
+colnames(core)[2] <- "subregion" #renaming to match
+core[[2]] <- tolower(core[[2]]) #changing to all lowercase
+
+#removing 'county' from the column
+
+core$subregion <- gsub(" county$", "", core$subregion)
+
+#merging the two dataframes together with nnner_join
+
+tn_core <- inner_join(tn_counties, core, by = "subregion")
+
+#Attempting to plot
+
+ditch_the_axes <- theme(
+  axis.text = element_blank(),
+  axis.line = element_blank(),
+  axis.ticks = element_blank(),
+  panel.border = element_blank(),
+  panel.grid = element_blank(),
+  axis.title = element_blank()
+)
+
+tn_per_pupil <- tn_base + 
+  geom_polygon(data = tn_core, aes(fill = Per_Pupil_Expenditures), color = "white") +
+  geom_polygon(color = "black", fill = NA) +
+  theme_bw() +
+  ditch_the_axes
+
+tn_per_pupil
+```
+
+
+```{r}
+tn_eng <- tn_base + 
+  geom_polygon(data = tn_core, aes(fill = avg_Eng), color = "white") +
+  geom_polygon(color = "black", fill = NA) +
+  theme_bw() +
+  scale_fill_gradientn(colours = rev(rainbow(7)),
+                       breaks = c(50, 65, 75, 85, 95, 100)) +
+  ditch_the_axes
+
+tn_eng
+```
+
+```{r}
+tn_math <- tn_base + 
+  geom_polygon(data = tn_core, aes(fill = avg_Math), color = "white") +
+  geom_polygon(color = "black", fill = NA) +
+  theme_bw() +
+  scale_fill_gradientn(colours = rev(rainbow(7)),
+                       breaks = c(50, 65, 75, 85, 95, 100)) +
+  ditch_the_axes
+
+tn_math
+```
+
+```{r}
+tn_per_pupil <- tn_base + 
+  geom_polygon(data = tn_core, aes(fill = Per_Pupil_Expenditures), color = "white") +
+  geom_polygon(color = "black", fill = NA) +
+  theme_bw() +
+  ditch_the_axes
+
+tn_per_pupil
+```
+
 
